k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ared-k3s-app
  labels:
    app: ared-k3s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ared-k3s-app
  template:
    metadata:
      labels:
        app: ared-k3s-app
    spec:
      containers:
        - name: ared
          image: ghcr.io/alvin-muchelle/alvin-muchelle/ared-k3s-app:v1.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
